# SMGG

./: CMakeLists.txt  main.cpp
gfx/: CMakeLists.txt
qml/: CMakeLists.txt  main.qml
qml/3dmap/: CMakeLists.txt  GalaxyMap.qml  SystemMap.qml  bigFiles.qrc
qml/3dmap/models/: Star.qml
qml/gui/: CMakeLists.txt  GalaxyGui.qml
qml/gui/GalaxyGui/: CMakeLists.txt
qml/gui/GalaxyGui/LeftPanel/: LeftMainPanel.qml
qml/gui/GalaxyGui/TopPanel/: CMakeLists.txt  GridButtonMenu.qml  TopMainPanel.qml
qml/plugins/: SMGG2Qmlplugin.exp  SMGG2Qmlplugin.lib  main.qml  qmldir
qml/utilities/: CMakeLists.txt  CustomButton.qml  Description.qml
qml/welcomeMenu/: CMakeLists.txt  WelcomeMenu.qml
src/: gameelement.cpp  gameelement.h  qinterfaces.cpp  qinterfaces.h
src/mapEditor/: galaxymap.cpp  galaxymap.h  mapinterface.cpp  mapinterface.h  planet.h  system.cpp  system.h  systemmap.cpp  systemmap.h
src/mapEditor/galaxies/: galaxy.cpp  galaxy.h  galaxyshape.cpp  galaxyshape.h
src/mapEditor/galaxy/: galaxy.h  galaxyshape.cpp
src/mapEditor/galaxyMap/: galaxymap.cpp  galaxymap.h  qgalaxymap.cpp  qgalaxymap.h  qgalaxymaplist.cpp  qgalaxymaplist.h  qsystemsmap.cpp  qsystemsmap.h
src/mapEditor/mainMap/: mapinit.cpp  mapinit.h
src/mapEditor/system/: planet.cpp  planet.h  system.cpp  system.h  systemobject.cpp  systemobject.h
src/settings/: application.cpp  application.h  applicationactions.cpp  applicationactions.h  applicationinterface.cpp  applicationinterface.h  logs.cpp  logs.h  settings.cpp  settings.h  settingsinterface.cpp  settingsinterface.h  settingsoperations.cpp  settingsoperations.h
src/utilities/: texture.h
tests/: tst_none.cpp  tst_settings.cpp
